# Program-zaliczeniowy-NYPD

./: .gitignore  pyproject.toml  setup.py
program_zaliczeniowy/: ludnosc.csv  main.py  notebook.ipynb
program_zaliczeniowy/analizy/: korelacje.py  statystyki.py
program_zaliczeniowy/dane/: dane.py
program_zaliczeniowy/testy/: testy.py
